objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>QMI_QCard_Actual_Score__c</fullName>
        <formula>QMI_Trigger_Event_Score__c +
QMI_Biz_Impacts_Score__c +
QMI_Decision_Making_Timeline_Score__c +
QMI_Pct_EEs_on_Healthcare_Score__c +
QMI_Union_Employees_Score__c +
QMI_Out_of_State_Score__c +
QMI_USLH_Score__c +
QMI_Decision_Making_Process_Score__c +
QMI_Decision_Maker_in_Discovery_Score__c +
QMI_PSH_Client_Connectivity_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-Card Actual Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_QCard_Grade_Pct__c</fullName>
        <formula>QMI_QCard_Actual_Score__c/QMI_QCard_Total_Possible__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Q-Card Grade %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>QMI_QCard_Grade__c</fullName>
        <description>This field is updated with a workflow field update, "Update QMI Q-Card Grade".</description>
        <label>Q-Card Grade</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QMI_QCard_Total_Possible__c</fullName>
        <defaultValue>28</defaultValue>
        <label>Q-Card Total Possible</label>
        <precision>3</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Trigger_Event_Score__c</fullName>
        <formula>IF(INCLUDES(Reasons_to_go_through_RFP__c, "Insurance renewal"), 1,0) +
IF(INCLUDES(Reasons_to_go_through_RFP__c, "Compliance issues"), 1,0) +
IF(INCLUDES(Reasons_to_go_through_RFP__c, "Loss of key employee / budget"), 1,0) +
IF(INCLUDES(Reasons_to_go_through_RFP__c, "Unhappy with current vendors (service)"), 1,0) +
IF(INCLUDES(Reasons_to_go_through_RFP__c, "Other"),0, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Trigger Event Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_USLH_Score__c</fullName>
        <formula>CASE(QMI_Does_the_prospect_need_USLH_coverage__c, 
"Yes", 0, 
"No", 1, 
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>USL&amp;H Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Union_Employees_Score__c</fullName>
        <formula>CASE(QMI_Does_the_prospect_have_union_EEs__c, 
"Yes", 0, 
"No", 1,  
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Union Employees Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QMI_Was_decision_maker_in_discovery_meet__c</fullName>
        <description>Was the ultimate decision maker in your Discovery Meeting?</description>
        <inlineHelpText>Was the ultimate decision maker in your Discovery Meeting?</inlineHelpText>
        <label>Was decision maker in discovery meeting?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_What_pct_of_EEs_are_on_healthcare__c</fullName>
        <label>What % of EE's are on healthcare?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QMI_Workers_Comp_Provider_Notes_If_Appli__c</fullName>
        <label>Workers' Comp Provider Notes - If Applic</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Reasons_to_go_through_RFP__c</fullName>
        <label>Is there a trigger event?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compliance issues</fullName>
                    <label>Recent compliance issue</label>
                </value>
                <value>
                    <fullName>Unhappy with current vendors (service)</fullName>
                    <label>Unhappy with current provider</label>
                </value>
                <value>
                    <fullName>Insurance renewal</fullName>
                </value>
                <value>
                    <fullName>Loss of key employee / budget</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other/Unknown</label>
                </value>
                <value>
                    <fullName>Internal (replacing a position/outsourcing)</fullName>
                    <isActive>false</isActive>
                    <label>Internal (replacing a position/outsourcing)</label>
                </value>
                <value>
                    <fullName>Looking for savings</fullName>
                    <isActive>false</isActive>
                    <label>Looking for savings</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referee_s_Name__c</fullName>
        <description>Name of the person who was referred to ProService</description>
        <inlineHelpText>Name of the person who was referred to ProService</inlineHelpText>
        <label>Referee's Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Client_Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred by Client/Partner</description>
        <inlineHelpText>Referred by Client/Partner</inlineHelpText>
        <label>Referred by Client/Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Department__c</fullName>
        <description>Department the employee belongs to that referred the Organization</description>
        <inlineHelpText>Department the employee belongs to that referred the Organization</inlineHelpText>
        <label>Referred by Department</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Account Management</fullName>
                </value>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Benefits</fullName>
                </value>
                <value>
                    <fullName>CIS</fullName>
                </value>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Client HR</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Executive</fullName>
                </value>
                <value>
                    <fullName>Front Office</fullName>
                </value>
                <value>
                    <fullName>HR Associates</fullName>
                </value>
                <value>
                    <fullName>Innovation</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Team</fullName>
                </value>
                <value>
                    <fullName>Internal HR</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Payroll</fullName>
                </value>
                <value>
                    <fullName>Pricing &amp; Analytics</fullName>
                </value>
                <value>
                    <fullName>Risk Control</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Operations</fullName>
                </value>
                <value>
                    <fullName>Solutions</fullName>
                </value>
                <value>
                    <fullName>Payroll-Kokua</fullName>
                </value>
                <value>
                    <fullName>Payroll- Hoomau</fullName>
                </value>
                <value>
                    <fullName>Payroll-Laulima</fullName>
                </value>
                <value>
                    <fullName>Payroll- Lokahi</fullName>
                </value>
                <value>
                    <fullName>Payroll-Pono</fullName>
                </value>
                <value>
                    <fullName>Payroll-Hookela</fullName>
                </value>
                <value>
                    <fullName>Implementation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_by_EE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Referred by internal EE</description>
        <inlineHelpText>Referred by internal EE</inlineHelpText>
        <label>Referred by EE</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_EE_text__c</fullName>
        <label>Referred by EE (text)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referrer_s_Name__c</fullName>
        <description>Name of the person who referred the Organization to ProService</description>
        <inlineHelpText>Name of the person who referred the Organization to ProService</inlineHelpText>
        <label>Referrer's Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referring_Client_Name__c</fullName>
        <label>Referring Client Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <description>Closed loss reasons or any other information regarding sales pipeline</description>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Restaurant_FB_not_FB_pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Restaurant (F&amp;B-not F&amp;B pricing) based pricing</description>
        <inlineHelpText>Restaurant (F&amp;B-not F&amp;B pricing) based pricing</inlineHelpText>
        <label>Restaurant (F&amp;B-not F&amp;B pricing)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retail_Pricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Retail based pricing</description>
        <inlineHelpText>Retail based pricing</inlineHelpText>
        <label>Retail Pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rush_Start__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for teams to know if the group is a rush start.</description>
        <inlineHelpText>Flag for teams to know if the group is a rush start.</inlineHelpText>
        <label>Rush Start?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Manager_Email__c</fullName>
        <label>Sales Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the User that is the Sales Ops Owner</description>
        <inlineHelpText>Lookup to the User that is the Sales Ops Owner</inlineHelpText>
        <label>Sales Ops Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Ops_Pricing_Notes__c</fullName>
        <label>Sales Ops/Pricing Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Send_Authorization_Email_Date__c</fullName>
        <formula>IF( Send_email__c = TRUE, NOW(), NULL)</formula>
        <inlineHelpText>Date when NCCI was sent.</inlineHelpText>
        <label>Send Authorization Email Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Lead_Application_Request_Date__c</fullName>
        <formula>IF( Send_Lead_Application_Request__c = TRUE, NOW(), NULL)</formula>
        <label>Send Lead Application Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Send_Lead_Application_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Lead Application Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send authorization email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <description>Updated from "Primary Quote"</description>
        <inlineHelpText>Updated from "Primary Quote"</inlineHelpText>
        <label>Service Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PEO</fullName>
                </value>
                <value>
                    <fullName>HRO-HRP</fullName>
                </value>
                <value>
                    <fullName>HRO-Ultipro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Start_up_Healthcare__c</fullName>
        <description>Flag to let the team know the prospect is a start-up and will be quoted standard healthcare.</description>
        <inlineHelpText>Flag to let the team know the prospect is a start-up and will be quoted standard healthcare.</inlineHelpText>
        <label>Standard Start-up Healthcare</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Startup_Company__c</fullName>
        <description>Startup Company based pricing</description>
        <inlineHelpText>Startup Company based pricing</inlineHelpText>
        <label>Startup Company?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SubCategory1__c</fullName>
        <label>Sub-Closed Reason 1</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Closed_Reason__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>HC Savings</fullName>
                </value>
                <value>
                    <fullName>WC Savings</fullName>
                </value>
                <value>
                    <fullName>Price vs. Competitor</fullName>
                </value>
                <value>
                    <fullName>Price vs. In-House</fullName>
                </value>
                <value>
                    <fullName>Service Level vs. Competitor</fullName>
                </value>
                <value>
                    <fullName>Service Level Perception in Market</fullName>
                </value>
                <value>
                    <fullName>Service Level Appreciation During Sales Process</fullName>
                </value>
                <value>
                    <fullName>Applicant Tracking System</fullName>
                </value>
                <value>
                    <fullName>Benefits Administration</fullName>
                </value>
                <value>
                    <fullName>Broker Relationship</fullName>
                </value>
                <value>
                    <fullName>Compliance Support</fullName>
                </value>
                <value>
                    <fullName>Custom Reporting</fullName>
                </value>
                <value>
                    <fullName>Direct to Carrier</fullName>
                </value>
                <value>
                    <fullName>eOnboarding</fullName>
                </value>
                <value>
                    <fullName>Payroll Only Alternative</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Experts</fullName>
                </value>
                <value>
                    <fullName>Time &amp; Attendance</fullName>
                </value>
                <value>
                    <fullName>UltiPro</fullName>
                </value>
                <value>
                    <fullName>Internal PSH relationships</fullName>
                </value>
                <value>
                    <fullName>PSH Client Referral</fullName>
                </value>
                <value>
                    <fullName>Common Ownership</fullName>
                </value>
                <value>
                    <fullName>Length of Process</fullName>
                </value>
                <value>
                    <fullName>HC Underwriting Process</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Proposal_Date__c</fullName>
        <label>Target Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Time_and_Attendance__c</fullName>
        <label>Time and Attendance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Time Clocks?</fullName>
                </value>
                <value>
                    <fullName>Monthly Fees?</fullName>
                </value>
                <value>
                    <fullName>Set-Up Fees?</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Trigger_Events_Buying_Reasons__c</fullName>
        <description>Get description from Sales Ops</description>
        <inlineHelpText>Get description from Sales Ops</inlineHelpText>
        <label>Trigger Events/Buying Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Union_Employees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Union Employees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WC_Notes__c</fullName>
        <label>WC Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WC_Pricing_Complete_Date__c</fullName>
        <label>WC Pricing Complete Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WC_Pricing_Request_Notes__c</fullName>
        <label>WC Pricing Request Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WC_Pricing_Request__c</fullName>
        <label>WC Pricing Request</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard underwriting</fullName>
                </value>
                <value>
                    <fullName>Carve out</fullName>
                </value>
                <value>
                    <fullName>HEMIC</fullName>
                </value>
                <value>
                    <fullName>OOS</fullName>
                </value>
                <value>
                    <fullName>Alignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WC_Ready_for_Pricing_Date__c</fullName>
        <label>WC Ready for Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WC_pricing_complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Pricing to let Sales Ops know that WC pricing is complete</description>
        <inlineHelpText>Flag for Pricing to let Sales Ops know that WC pricing is complete</inlineHelpText>
        <label>WC pricing complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WCreadyforpricing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for Sales Ops to let Pricing know WC is ready for pricing</description>
        <inlineHelpText>Flag for Sales Ops to let Pricing know WC is ready for pricing</inlineHelpText>
        <label>WC ready for pricing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Waived_Admi__c</fullName>
        <description>Waived Admin Notes</description>
        <inlineHelpText>Waived Admin Notes</inlineHelpText>
        <label>Waived Admin Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Waived_Admin_Estimate__c</fullName>
        <description>Waived Admin Estimate cost that will display in the proposal</description>
        <inlineHelpText>Waived Admin Estimate cost that will display in the proposal</inlineHelpText>
        <label>Waived Admin Estimate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Who_did_we_lose_this_group_to__c</fullName>
        <label>Who did we lose this group to?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>ADP</fullName>
                </value>
                <value>
                    <fullName>Altres</fullName>
                </value>
                <value>
                    <fullName>Ceridian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>None, Lost for Reasons Unrelated to Competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_owner_be_on_health_care__c</fullName>
        <label>Will the owner be on health care?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Will_the_owner_be_on_payroll__c</fullName>
        <label>Will the owner be on payroll?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Date__c</fullName>
        <description>Date of the 1st meeting. This must be populated in order for an opportunity to be created - even if it already happened</description>
        <label>1st Meeting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1st_Meeting_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the first meeting occurred. (If this is not checked then an automation - currently workflow) will update the Account back to being huntable</description>
        <label>1st Meeting Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>XXOpp_External_ID__c</fullName>
        <description>Can be deleted once export complete. Since one opp per account can use Client Number as ExtOppId</description>
        <externalId>true</externalId>
        <label>XXOpp External ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mpPM_HandoverProspectContactNotes__c</fullName>
        <label>Contact Handover Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <sharingModel>Private</sharingModel>
    <listViews>
        <fullName>Active_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>X1st_Meeting_Date__c</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>1st Meeting Set,Info Gathering,Application Review,Submit to Pricing,Pricing Complete,Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <filters>
            <field>X1st_Meeting_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>12/31/2017</value>
        </filters>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>TSabl</value>
        </filters>
        <label>Active Opportunities</label>
    </listViews>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.LEAD_SOURCE</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>X1st_Meeting_Date__c</columns>
        <columns>Lead_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Marketing Lead</value>
        </filters>
        <label>Internal Referrals by Department</label>
    </listViews>
    <listViews>
        <fullName>Client_Referral_Opportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Lead_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Client Referral</value>
        </filters>
        <filters>
            <field>Lead_Date__c</field>
            <operation>greaterOrEqual</operation>
            <value>4/1/2018</value>
        </filters>
        <label>Client Referral Opportunities</label>
    </listViews>
    <listViews>
        <fullName>Open_Opps</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.STAGE_NAME</field>
            <operation>equals</operation>
            <value>1st Meeting Set,Info Gathering,Application Review,Submit to Pricing,Pricing Complete,Proposal Complete,Negotiation/Review,Verbal Agreement,Contract Signing</value>
        </filters>
        <label>Open Opps</label>
    </listViews>
    <listViews>
        <fullName>Opportunity_Pipeline_Casey</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Final_Pricing</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>HC_pricing_complete__c</columns>
        <columns>WC_pricing_complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>WC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>HC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ready for Final Pricing</label>
    </listViews>
    <listViews>
        <fullName>Ready_for_Pricing</fullName>
        <booleanFilter>( 1 AND 2) OR (3 AND 4)</booleanFilter>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>HC_pricing_complete__c</columns>
        <columns>WC_pricing_complete__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>HC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>WC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>HC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>WC_pricing_complete__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Ready for Pricing</label>
    </listViews>
    <listViews>
        <fullName>Self_Gen</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>Lead_Date__c</columns>
        <columns>X1st_Meeting_Date__c</columns>
        <columns>Clientspace_Application_Date__c</columns>
        <columns>Clientspace_Pricing_Submit_Date__c</columns>
        <columns>Clientspace_Proposal_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.LEAD_SOURCE</field>
            <operation>equals</operation>
            <value>Self Gen - BDM</value>
        </filters>
        <label>Self-Gen</label>
    </listViews>
    <validationRules>
        <fullName>Admin_blank_1st_Meet_to_another_stage</fullName>
        <active>false</active>
        <description>Est Annual Admin Amount field is required to move Stage from "1st Meeting Set" to another Stage</description>
        <errorConditionFormula>AND( 
ISBLANK( Amount ), 
ISPICKVAL(PRIORVALUE(StageName),"1st Meeting Set"), 
OR( 
ISPICKVAL(StageName,"Info Gathering"), 
ISPICKVAL(StageName,"Application Review"), 
ISPICKVAL(StageName,"Submit to Pricing"), 
ISPICKVAL(StageName,"Pricing Complete"), 
ISPICKVAL(StageName,"Proposal Complete"), 
ISPICKVAL(StageName,"Negotiation/Review"), 
ISPICKVAL(StageName,"Verbal Agreement"), 
ISPICKVAL(StageName,"Contract Signing"), 
ISPICKVAL(StageName,"Closed Won") 
))</errorConditionFormula>
        <errorDisplayField>Amount</errorDisplayField>
        <errorMessage>Please input value</errorMessage>
    </validationRules>
</CustomObject>